--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "express": "latest",
     "hbs": "^2.8.0",
     "request": "latest",
-    "socket.io": "latest",
+    "socket.io": "^1.3.3",
     "twitter": "latest",
     "underscore": "latest"
   }
